--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,12 +53,12 @@ textarea {
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
@@ -72,6 +72,10 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.unSaved {
+  border: 3px solid red;
 }
 
 /*add icon/styling? for save button*/
